# llmops

./: .env.example  .gitignore  README.md  download_dataset.py  gcp_con_test.py  main.py  nathan_model_training_pipeline.json  pirate-translator-pipeline.json  pyproject.toml
scripts/: pipeline_runner.py  validate_gcp_setup.py
src/: constants.py  handler.py
src/app/: main.py
src/pipeline_components/: data_transformation_component.py  evaluation_component.py  fine_tuning_component.py  inference_component.py
src/pipelines/: model_training_pipeline.py
