[project]
name = "llmops"
version = "0.1.0"
description = "LLMOps Project"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "google-cloud-aiplatform[prediction]>=1.38.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=2.19.0",
    "pandas>=2.3.3",
    "kfp>=2.14.6",
    "datasets>=4.1.1",
    "ipykernel>=7.0.0",
    "ragas>=0.3.5",
    "rouge-score>=0.1.2",
    "gcsfs>=2025.9.0",
    "tensorboard>=2.20.0",
    "rapidfuzz>=3.14.1",
    "sacrebleu>=2.5.1",
    "transformers==4.46.*",
    "accelerate>=1.10.1",
    "trl>=0.17.0",
    "peft==0.13.2",
    "datasets>=4.2.0",
    "fsspec>=2025.9.0",
    "pip>=23.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "jinja2>=3.1.4",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.10.0",
    "numpy==2.0.*,
    "jupytext>=1.16.4,
    "mlflow>=2.17.0,
    "virtualenv>=20.26.6,
    "dill>=0.3.9,
    "fastapi[standard]>=0.115.2",
]